# install the application's stylesheets
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/go-for-it-3.10.css DESTINATION ${PKGDATADIR}/style/)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/go-for-it-3.10-dark.css DESTINATION ${PKGDATADIR}/style/)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/widgets-3.10.css DESTINATION ${PKGDATADIR}/style/)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/go-for-it-3.20.css DESTINATION ${PKGDATADIR}/style/)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/go-for-it-3.20-dark.css DESTINATION ${PKGDATADIR}/style/)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/widgets-3.20.css DESTINATION ${PKGDATADIR}/style/)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/colors.css DESTINATION ${PKGDATADIR}/style/)
install (FILES ${CMAKE_CURRENT_SOURCE_DIR}/colors-dark.css DESTINATION ${PKGDATADIR}/style/)
